--- a/Frontend/src/app/components/nosotros/nosotros.component.html
+++ b/Frontend/src/app/components/nosotros/nosotros.component.html
@@ -1,5 +1,114 @@
+<!--barra de menu-->
 <app-navbar></app-navbar>
-<div>
-    <h2>Quienes Somos?</h2>
+
+<!--quienes somos/mision-->
+<section id="hero" class="bg primary">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6">
+        <h2 class="tex-light display-4">Misión</h2>
+        <p class="tex-light lead mt-4">
+          Somos una empresa que presta servicio a pequeños tenderos que desean
+          impulsar su empresa a la era digital.
+        </p>
+      </div>
+
+      <div class="col-lg-5 ofset-lg-1 d-flex">
+        <div class="align-self-center">
+          <img
+            src="https://image.jimcdn.com/app/cms/image/transf/none/path/s356a587240524473/image/iff6fa1b73187b90a/version/1424954807/dise%C3%B1a-tu-tarjeta-de-visita-software-recomendado.jpg"
+            class="img-thumbnail"
+          />
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--Vision-->
+<div class="container">
+  <div class="row">
+    <div class="col-lg-5 ofset-lg-1 d-flex">
+        <div class="align-self-center">
+      <img class="img-thumbnail" src="https://destinonegocio.com/wp-content/uploads/2015/08/ico-destinonegocio-tarjetas-de-visita-istock-getty-images-790x430.jpg"
+      class="img-thumbnail"/>
+    </div>
 </div>
-<app-footer></app-footer>
+    <div class="col-lg-6">
+      <h2 class="tex-light display-4">Vision</h2>
+      <p class="tex-light lead mt-4">
+        Ser la compañía Bogotana reconocida por los tenderos por prestar el
+        mejor servicio a pequeños tiendas.
+      </p>
+    </div>
+  </div>
+</div>
+<!--Valores-->
+<section id="hero" class="bg primary">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6">
+        <h2 class="tex-light display-4">Nuestros Valores</h2>
+        <p class="tex-light lead mt-4">Responsabilidad social.</p>
+        <p class="tex-light lead mt-4">Excelencia.</p>
+        <p class="tex-light lead mt-4">Responsabilidad.</p>
+        <p class="tex-light lead mt-4">Honestidad.</p>
+        <p class="tex-light lead mt-4">Calidad.</p>
+        <p class="tex-light lead mt-4">Servicio al Cliente.</p>
+      </div>
+      <div class="col-lg-5 ofset-lg-1 d-flex">
+        <div class="align-self-center">
+          <img src="https://www.entornoturistico.com/wp-content/uploads/2016/10/equipo-de-trabajo-profesional-%C3%A9tica-en-el-turismo.jpg" class="img-thumbnail" />
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--Nuestro equipo de trabajo-->
+<section id="hero" class="bg primary">
+  <div class="equipo">
+    <h2 class="tex-light display-4">Nuestro equipo.</h2>
+    <section class="section-flex">
+      <article class="character">
+        <img src="./img/giovany.jpeg" />
+        <div class="info-character">
+          <p><b>Jonnathan Quintana Romero</b></p>
+        </div>
+      </article>
+
+      <article class="character">
+        <img
+          src="https://scontent.fbog9-1.fna.fbcdn.net/v/t1.6435-9/85106338_10216235880196305_8377449872533487616_n.jpg?_nc_cat=109&ccb=1-3&_nc_sid=174925&_nc_eui2=AeGTohsnOQRj4Zso2gGf6Q-zSAlvq8lvH_1ICW-ryW8f_fvsWmgaov_PcM9wHUSSyB4&_nc_ohc=RHcyIHOrTZ4AX8pTBEx&_nc_ht=scontent.fbog9-1.fna&oh=8ff9ddd644a574dfa638daa1b026bd39&oe=60B2FB8E"
+        />
+        <div class="info-character">
+          <p><b>Giovany Alexander Chalapud pedraza</b></p>
+        </div>
+      </article>
+
+      <article class="character">
+        <img src="./img/angelica.jpeg" />
+        <div class="info-character">
+          <p><b>Fernando Honorio Martinez Urrego</b></p>
+        </div>
+      </article>
+
+      <article class="character">
+        <img src="./img/jose gilberto.jpeg" />
+        <div class="info-character">
+          <p><b>Diego Miguel Moreno Sanchez </b></p>
+        </div>
+      </article>
+
+      <article class="character">
+        <img src="#" />
+        <div class="info-character">
+          <p><b>Vicdover Javier Rodriguez Pinto</b></p>
+        </div>
+      </article>
+    </section>
+  </div>
+  <!--fin de pagina-->
+
+  <app-footer></app-footer>
+</section>
