--- a/Frontend/src/app/components/nosotros/nosotros.component.html
+++ b/Frontend/src/app/components/nosotros/nosotros.component.html
@@ -2,12 +2,12 @@
 <app-navbar></app-navbar>
 
 <!--quienes somos/mision-->
-<section id="hero" class="bg primary">
-  <div class="container">
+
+  <div class="cuadro">
     <div class="row">
       <div class="col-lg-6">
         <h2 class="tex-light display-4">Misión</h2>
-        <p class="tex-light lead mt-4">
+        <p class="tex-light lead mt-4 p-5 ">
           Somos una empresa que presta servicio a pequeños tenderos que desean
           impulsar su empresa a la era digital.
         </p>
@@ -23,10 +23,10 @@
       </div>
     </div>
   </div>
-</section>
+
 
 <!--Vision-->
-<div class="container">
+<div class="cuadro">
   <div class="row">
     <div class="col-lg-5 ofset-lg-1 d-flex">
         <div class="align-self-center">
@@ -44,7 +44,7 @@
   </div>
 </div>
 <!--Valores-->
-<section id="hero" class="bg primary">
+<section id="hero" class="cuadro">
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
