--- a/Frontend/src/app/components/nosotros/nosotros.component.css
+++ b/Frontend/src/app/components/nosotros/nosotros.component.css
@@ -1,14 +1,15 @@
-.container{
-    display: block;
+.cuadro{  
     background: linear-gradient(90deg, rgb(193, 224, 12) 0%, rgb(0, 0, 0) 100%);
     
 }
 
+p{
+    color:  rgb(248, 244, 255)
+}
+
     .equipo {
-       margin-left: 10%; 
-       margin-right: 10%;
-       margin-top: 5%; 
-       background: linear-gradient(90deg, rgba(0, 0, 0) 0%, rgba(193, 224, 12) 100%);
+        
+       background: linear-gradient(90deg, rgb(193, 224, 12) 0%, rgb(0, 0, 0) 100%);
     } 
     
     h2{
