--- a/Frontend/src/app/components/nosotros/nosotros.component.html
+++ b/Frontend/src/app/components/nosotros/nosotros.component.html
@@ -29,8 +29,8 @@
 <div class="cuadro">
   <div class="row">
     <div class="col-lg-5 ofset-lg-1 d-flex">
-        <div class="align-self-center">
-      <img class="img-thumbnail" src="https://destinonegocio.com/wp-content/uploads/2015/08/ico-destinonegocio-tarjetas-de-visita-istock-getty-images-790x430.jpg"
+        <div class="align-self-center p-5">
+      <img class="img-thumbnail " src="https://destinonegocio.com/wp-content/uploads/2015/08/ico-destinonegocio-tarjetas-de-visita-istock-getty-images-790x430.jpg"
       class="img-thumbnail"/>
     </div>
 </div>
@@ -56,7 +56,7 @@
         <p class="tex-light lead mt-4">Calidad.</p>
         <p class="tex-light lead mt-4">Servicio al Cliente.</p>
       </div>
-      <div class="col-lg-5 ofset-lg-1 d-flex">
+      <div class="col-lg-5 ofset-lg-1 d-flex ">
         <div class="align-self-center">
           <img src="https://www.entornoturistico.com/wp-content/uploads/2016/10/equipo-de-trabajo-profesional-%C3%A9tica-en-el-turismo.jpg" class="img-thumbnail" />
         </div>
@@ -68,7 +68,7 @@
 <!--Nuestro equipo de trabajo-->
 <section id="hero" class="bg primary">
   <div class="equipo">
-    <h2 class="tex-light display-4">Nuestro equipo.</h2>
+    <h2 class="tex-light display-4 mt-3">Nuestro equipo.</h2>
     <section class="section-flex">
       <article class="character">
         <img src="./img/giovany.jpeg" />
