--- a/Frontend/src/app/components/navbar/navbar.component.html
+++ b/Frontend/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,36 @@
-<p>navbar works!</p>
+          <!--Inicio Barra Navegacion-->	
+          <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+        
+            <!--Imagen o logo-->
+                <a class="navbar-brand" href="../home/home.component.html"><img src="./favicon" width="30" height="30" alt=""></a>
+      
+                <!--Titulo Pagina-->
+                <a class="navbar-brand" href="../home/home.component.html">ClubStore</a>
+                
+                <!--Botones de accesos-->
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="../home/home.component.html">Inicio  / ></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../store/store.component.html">Tiendas  /  </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../admin/admin.component.html">Crear Tienda  /  </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../nosotros/nosotros.component.html">Nosotros  /  </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../contact/contact.component.html">Contactanos </a>
+                        </li>
+                      </ul>
+                    
+                      <!--Boton Buscar-->         
+                      <form class="form-inline">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+                      </form>
+                </div>
+            </nav>
