--- a/Frontend/src/app/components/nosotros/nosotros.component.html
+++ b/Frontend/src/app/components/nosotros/nosotros.component.html
@@ -94,7 +94,8 @@
       </article>
 
       <article class="character">
-        <img src="./img/jose gilberto.jpeg" />
+        <img src="https://scontent.fbog12-1.fna.fbcdn.net/v/t1.6435-9/p843x403/182671087_10224734489526803_6668210934495732175_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=730e14&_nc_ohc=lC4Pd5u58qUAX-RNx-M&_nc_ht=scontent.fbog12-1.fna&tp=6&oh=52ede541ee51bb856a56a51113185f48&oe=60B5D244
+        " />
         <div class="info-character">
           <p><b>Diego Miguel Moreno Sanchez </b></p>
         </div>
