--- a/Frontend/src/app/components/navbar/navbar.component.html
+++ b/Frontend/src/app/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="/home">Inicio  / ></a>
+                            <a class="nav-link" href="/home">Inicio  /</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/store">Tiendas  /  </a>
