Agrego  el nav a la pantalla home

--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -1,6 +1,10 @@
-<p>NAVBAR</p>
-<div>
-    <app-slider></app-slider>
+<app-navbar></app-navbar>
+<app-slider></app-slider>
+
+<div class="wpb_row vc_inner vc_row vc_row-fluid jupiter-donut-attchet-false">
+    <div class="vc_column vc_column-container vc_col-sm-4"> hola </div>
+    <div class="vc_column vc_column-container vc_col-sm-4"> hola </div>
+    <div class="vc_column vc_column-container vc_col-sm-4"> hola </div>
 </div>
 
 
