--- a/Frontend/src/app/components/navbar/navbar.component.html
+++ b/Frontend/src/app/components/navbar/navbar.component.html
@@ -2,10 +2,7 @@
           <nav class="navbar navbar-expand-lg navbar-light bg-warning">
         
             <!--Imagen o logo-->
-                <a class="navbar-brand" href="../home/home.component.html"><img src="./favicon" width="30" height="30" alt=""></a>
-      
-                <!--Titulo Pagina-->
-                <a class="navbar-brand" href="../home/home.component.html">ClubStore</a>
+                <a class="navbar-brand" href="../home/home.component.html"><img src="https://scontent.fbog12-1.fna.fbcdn.net/v/t1.6435-9/182922413_10224734616689982_8569234680146706080_n.jpg?_nc_cat=109&ccb=1-3&_nc_sid=730e14&_nc_ohc=3d0KDMx-segAX_OF68Z&_nc_ht=scontent.fbog12-1.fna&oh=7ab30d4e919bdaccd07554c0db6741ed&oe=60B87D7B" width="300" height="50" alt=""></a>
                 
                 <!--Botones de accesos-->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
