--- a/Frontend/src/app/components/nosotros/nosotros.component.html
+++ b/Frontend/src/app/components/nosotros/nosotros.component.html
@@ -3,37 +3,39 @@
 
 <!--quienes somos/mision-->
 
-  <div class="cuadro">
-    <div class="row">
-      <div class="col-lg-6">
-        <h2 class="tex-light display-4">Misión</h2>
-        <p class="tex-light lead mt-4 p-5 ">
-          Somos una empresa que presta servicio a pequeños tenderos que desean
-          impulsar su empresa a la era digital.
-        </p>
-      </div>
+<div class="cuadro">
+  <div class="row">
+    <div class="col-lg-6">
+      <h2 class="tex-light display-4">Misión</h2>
+      <p class="tex-light lead mt-4 p-5">
+        Somos una empresa que presta servicio a pequeños tenderos que desean
+        impulsar su empresa a la era digital.
+      </p>
+    </div>
 
-      <div class="col-lg-5 ofset-lg-1 d-flex">
-        <div class="align-self-center">
-          <img
-            src="https://image.jimcdn.com/app/cms/image/transf/none/path/s356a587240524473/image/iff6fa1b73187b90a/version/1424954807/dise%C3%B1a-tu-tarjeta-de-visita-software-recomendado.jpg"
-            class="img-thumbnail"
-          />
-        </div>
+    <div class="col-lg-5 ofset-lg-1 d-flex">
+      <div class="align-self-center">
+        <img
+          src="https://image.jimcdn.com/app/cms/image/transf/none/path/s356a587240524473/image/iff6fa1b73187b90a/version/1424954807/dise%C3%B1a-tu-tarjeta-de-visita-software-recomendado.jpg"
+          class="img-thumbnail"
+        />
       </div>
     </div>
   </div>
-
+</div>
 
 <!--Vision-->
 <div class="cuadro">
   <div class="row">
     <div class="col-lg-5 ofset-lg-1 d-flex">
-        <div class="align-self-center p-5">
-      <img class="img-thumbnail " src="https://destinonegocio.com/wp-content/uploads/2015/08/ico-destinonegocio-tarjetas-de-visita-istock-getty-images-790x430.jpg"
-      class="img-thumbnail"/>
+      <div class="align-self-center p-5">
+        <img
+          class="img-thumbnail"
+          src="https://destinonegocio.com/wp-content/uploads/2015/08/ico-destinonegocio-tarjetas-de-visita-istock-getty-images-790x430.jpg"
+          class="img-thumbnail"
+        />
+      </div>
     </div>
-</div>
     <div class="col-lg-6">
       <h2 class="tex-light display-4">Vision</h2>
       <p class="tex-light lead mt-4">
@@ -56,9 +58,12 @@
         <p class="tex-light lead mt-4">Calidad.</p>
         <p class="tex-light lead mt-4">Servicio al Cliente.</p>
       </div>
-      <div class="col-lg-5 ofset-lg-1 d-flex ">
+      <div class="col-lg-5 ofset-lg-1 d-flex">
         <div class="align-self-center">
-          <img src="https://www.entornoturistico.com/wp-content/uploads/2016/10/equipo-de-trabajo-profesional-%C3%A9tica-en-el-turismo.jpg" class="img-thumbnail" />
+          <img
+            src="https://www.entornoturistico.com/wp-content/uploads/2016/10/equipo-de-trabajo-profesional-%C3%A9tica-en-el-turismo.jpg"
+            class="img-thumbnail"
+          />
         </div>
       </div>
     </div>
@@ -94,8 +99,10 @@
       </article>
 
       <article class="character">
-        <img src="https://scontent.fbog12-1.fna.fbcdn.net/v/t1.6435-9/p843x403/182671087_10224734489526803_6668210934495732175_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=730e14&_nc_ohc=lC4Pd5u58qUAX-RNx-M&_nc_ht=scontent.fbog12-1.fna&tp=6&oh=52ede541ee51bb856a56a51113185f48&oe=60B5D244
-        " />
+        <img
+          src="https://scontent.fbog12-1.fna.fbcdn.net/v/t1.6435-9/p843x403/182671087_10224734489526803_6668210934495732175_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=730e14&_nc_ohc=lC4Pd5u58qUAX-RNx-M&_nc_ht=scontent.fbog12-1.fna&tp=6&oh=52ede541ee51bb856a56a51113185f48&oe=60B5D244
+        "
+        />
         <div class="info-character">
           <p><b>Diego Miguel Moreno Sanchez </b></p>
         </div>
