--- a/Frontend/src/app/components/footer/footer.component.html
+++ b/Frontend/src/app/components/footer/footer.component.html
@@ -1,4 +1,11 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<a href="https://api.whatsapp.com/send?phone=+573123442529&text=Hola%20quiero%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Clubstore" class="float" target="_blank">
-<i class="fa fa-whatsapp my-float"></i>
+<link
+  rel="stylesheet"
+  href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+/>
+<a
+  href="https://api.whatsapp.com/send?phone=+573123442529&text=Hola%20quiero%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Clubstore"
+  class="float"
+  target="_blank"
+>
+  <i class="fa fa-whatsapp my-float"></i>
 </a>
