--- a/Frontend/src/app/components/page404/page404.component.html
+++ b/Frontend/src/app/components/page404/page404.component.html
@@ -1,7 +1,9 @@
 <app-navbar></app-navbar>
 <article class="img">
-    <img
-      src="https://www.seoptimer.com/es/blog/wp-content/uploads/2014/08/404.png " alt="" width="1200" height="500"
-     />
-     
-  </article>
+  <img
+    src="https://www.seoptimer.com/es/blog/wp-content/uploads/2014/08/404.png "
+    alt=""
+    width="1200"
+    height="500"
+  />
+</article>
