--- a/Frontend/src/app/components/admin/admin.component.html
+++ b/Frontend/src/app/components/admin/admin.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="container-fluid">
     <div class="row">
         <!-- Form-->
@@ -86,3 +87,4 @@
         </div>
     </div>
 </div>
+<app-footer></app-footer>
