Cambios en la pantala de home

--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -1,10 +1,64 @@
 <app-navbar></app-navbar>
 <app-slider></app-slider>
 
-<div class="wpb_row vc_inner vc_row vc_row-fluid jupiter-donut-attchet-false">
-    <div class="vc_column vc_column-container vc_col-sm-4"> hola </div>
-    <div class="vc_column vc_column-container vc_col-sm-4"> hola </div>
-    <div class="vc_column vc_column-container vc_col-sm-4"> hola </div>
+<div class="row row-fluid ml-3 mb-4 mt-4 mr-3">
+    <div class="column container col-sm-4 btn btn-warning"> ¿ Qué es ClubStore ? </div>
+    <div class="column container col-sm-4 btn btn-primary"> ¿ Cómo Funciona ? </div>
+    <div class="column container col-sm-4 btn btn-danger"> hola </div>
 </div>
 
+<h1 style="text-align: center; margin-bottom: 4%; color: #ffc000; background-color: black; "> ¿ QUÉ ES CLUBSTORE ? </h1>
 
+<div class="row container-fluid" style="margin-left: 0px; margin-top: 5px;">
+
+    <div class="col-lg-4" >
+      <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://vtex.com/wp-content/uploads/2019/03/marketplace-o-que-e-e-qual-sua-importancia.jpg" alt="culture1">
+      <h2 style="font-size: 2.5rem; margin-left: 20%;"> MarketPlace </h2>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>La ciudad es la capital de eventos mundiales como el Festival Iberoamericano de Teatro, el Festival Rock al Parque, Festival Estéreo Picnic.</p>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;">Conocer Mas... &raquo;</a></p>
+    </div>
+
+    <div class="col-lg-4">
+      <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://vtex.com/wp-content/uploads/2019/03/marketplace-o-que-e-e-qual-sua-importancia.jpg" alt="culture1">
+      <h2 style="font-size: 2.5rem; margin-left: 16%;"> MicroSitio Web </h2>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>También conocida como una ciudad creativa, declarada por la UNESCO como ciudad de la música, el Festival de Cine Independiente Indiebo, ArtBo, entre otros.</p>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;">Conocer Mas... &raquo;</a></p>
+    </div>
+
+    <div class="col-lg-4">
+      <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://vtex.com/wp-content/uploads/2019/03/marketplace-o-que-e-e-qual-sua-importancia.jpg" alt="culture1">
+      <h2 style="margin-left: 20%; font-size: 2.5rem;"> Tienda Online </h2>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Bogotá ofrece también lo mejor de las artes escénicas, plásticas, cinema, patrimonio arquitectónico, literatura, festivales y eventos masivos al aire libre.</p>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;">Conocer Mas... &raquo;</a></p>
+    </div>
+</div>
+
+<div style="margin-left: 0px; margin-top: 5px; border-top: #ffc000 solid;"></div>
+
+<h1 style="text-align: center; margin-bottom: 4%; margin-top: 3%; background-color: #ffc000;"> ¿ CÓMO FUNCIONA CLUBSTORE ? </h1>
+
+<div class="row container-fluid">
+
+    <div class="col-lg-4">
+      <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://vtex.com/wp-content/uploads/2019/03/marketplace-o-que-e-e-qual-sua-importancia.jpg" alt="culture1">
+      <h2 style="font-size: 2.5rem; margin-left: 9%;"> Activa tu Cuenta </h2>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Fundada por Gonzalo Jiménez de Quesada y bautizada como Bacatá, fue Alexander Von Humbolt quien la denominó la "Atenas de América".</p>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;">Conocer Mas... &raquo;</a></p>
+    </div>
+
+    <div class="col-lg-4">
+      <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://vtex.com/wp-content/uploads/2019/03/marketplace-o-que-e-e-qual-sua-importancia.jpg" alt="culture1">
+      <h2 style="font-size: 2.5rem; margin-left: 15%;"> Crea tu Tienda </h2>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Capital, cuyos habitantes más tradicionales se les reconoce con el gentilicio de cachacos y a los más jóvenes como rolos.</p>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;">Conocer Mas... &raquo;</a></p>
+    </div>
+
+    <div class="col-lg-4">
+      <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://vtex.com/wp-content/uploads/2019/03/marketplace-o-que-e-e-qual-sua-importancia.jpg" alt="culture1">
+      <h2 style="margin-left: 25%; font-size: 2.5rem;"> Vende tus Productos </h2>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;> Bogotá fue designada como Capital Iberoamericana de la Cultura 2007, distinción otorgada por la UCCI (Unión de Ciudades Capitales de Iberoamérica).</p>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;">Conocer Mas... &raquo;</a></p>
+    </div>
+</div>
+
+<app-footer></app-footer>
