--- a/Frontend/src/app/components/slider/slider.component.html
+++ b/Frontend/src/app/components/slider/slider.component.html
@@ -9,7 +9,7 @@
     <div class="carousel-item active">
       <img src="https://trucoslondres.com/wp-content/uploads/2017/05/store.jpg" style="margin-left: 9%; margin-right: 1%;" class="d-block w-100" alt="..." width="80">
       <div class="carousel-caption d-none d-md-block">
-        <h4 style="color:black">Club Store</h4>
+        <h4 style="color:black; background-color: #ffc000; margin-left: 10%;">Club Store</h4>
         <p style="color:black">El sitio web de todas tus tiendas de barrio !<strong> 24 / 7</strong></p>
       </div>
     </div>
