falta foto de javier

--- a/Frontend/src/app/components/nosotros/nosotros.component.html
+++ b/Frontend/src/app/components/nosotros/nosotros.component.html
@@ -76,7 +76,8 @@
     <h2 class="tex-light display-4 mt-3">Nuestro equipo.</h2>
     <section class="section-flex">
       <article class="character">
-        <img src="./img/giovany.jpeg" />
+        <img src="https://scontent.fbog4-2.fna.fbcdn.net/v/t1.6435-0/p526x296/182493334_10159045390298280_1491607527334216184_n.jpg?_nc_cat=105&ccb=1-3&_nc_sid=730e14&_nc_ohc=_S2CT4uKINIAX_HBS-n&_nc_ht=scontent.fbog4-2.fna&tp=6&oh=b83020898fa1c5ca33c708e32b334748&oe=60B65C33" 
+        width="50" height="200"/>
         <div class="info-character">
           <p><b>Jonnathan Quintana Romero</b></p>
         </div>
@@ -85,14 +86,15 @@
       <article class="character">
         <img
           src="https://scontent.fbog9-1.fna.fbcdn.net/v/t1.6435-9/85106338_10216235880196305_8377449872533487616_n.jpg?_nc_cat=109&ccb=1-3&_nc_sid=174925&_nc_eui2=AeGTohsnOQRj4Zso2gGf6Q-zSAlvq8lvH_1ICW-ryW8f_fvsWmgaov_PcM9wHUSSyB4&_nc_ohc=RHcyIHOrTZ4AX8pTBEx&_nc_ht=scontent.fbog9-1.fna&oh=8ff9ddd644a574dfa638daa1b026bd39&oe=60B2FB8E"
-        />
+          width="50" height="200"/>
         <div class="info-character">
           <p><b>Giovany Alexander Chalapud pedraza</b></p>
         </div>
       </article>
 
       <article class="character">
-        <img src="./img/angelica.jpeg" />
+        <img src="https://scontent-bog1-1.xx.fbcdn.net/v/t1.6435-9/182903446_239203344650597_6470215149514221078_n.jpg?_nc_cat=111&ccb=1-3&_nc_sid=730e14&_nc_eui2=AeHm44yWTsv1YaD95RMdDFPkyVlU9IkCQr3JWVT0iQJCvVsfp0X82CpAkCN0yoIvI0GBSECd3Nrk0lZL0C-7tfLt&_nc_ohc=Htaj2RsHfcgAX_odA2y&_nc_ht=scontent-bog1-1.xx&oh=eeb8139c3bd3737bd32c1fd9190f655d&oe=60B7E4EA" 
+        width="50" height="200"/>
         <div class="info-character">
           <p><b>Fernando Honorio Martinez Urrego</b></p>
         </div>
@@ -100,9 +102,8 @@
 
       <article class="character">
         <img
-          src="https://scontent.fbog12-1.fna.fbcdn.net/v/t1.6435-9/p843x403/182671087_10224734489526803_6668210934495732175_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=730e14&_nc_ohc=lC4Pd5u58qUAX-RNx-M&_nc_ht=scontent.fbog12-1.fna&tp=6&oh=52ede541ee51bb856a56a51113185f48&oe=60B5D244
-        "
-        />
+          src="https://scontent.fbog12-1.fna.fbcdn.net/v/t1.6435-9/p843x403/182671087_10224734489526803_6668210934495732175_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=730e14&_nc_ohc=lC4Pd5u58qUAX-RNx-M&_nc_ht=scontent.fbog12-1.fna&tp=6&oh=52ede541ee51bb856a56a51113185f48&oe=60B5D244"
+          width="50" height="200"/>
         <div class="info-character">
           <p><b>Diego Miguel Moreno Sanchez </b></p>
         </div>
@@ -110,7 +111,7 @@
 
       <article class="character">
         <img src="#" />
-        <div class="info-character">
+        <div class="info-character" width="50" height="200">
           <p><b>Vicdover Javier Rodriguez Pinto</b></p>
         </div>
       </article>
@@ -119,4 +120,3 @@
   <!--fin de pagina-->
 
   <app-footer></app-footer>
-</section>
